force-app/main/default/objects/SFDC_Config__mdt/SFDC_Config__mdt.object-meta.xml
<CustomObject>
    <label>SFDC Config</label>
    <pluralLabel>SFDC Configs</pluralLabel>
</CustomObject>