force-app/main/default/objects/SFDC_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it is checked, then will be shown in the list of Salesforce Orgs with status as connected/disconnected in Salesforce to Salesforce Integration LWC</description>
    <inlineHelpText>If it is checked, then will be shown in the list of Salesforce Orgs with status as connected/disconnected in Salesforce to Salesforce Integration LWC</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>