force-app/main/default/objects/SFDC_Config__mdt/fields/Allowed_Operations_Details__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Operations_Details__c</fullName>
    <description>GET^/services/data/v60.0/query/?q=SELECT Id,Name,Type,Website,Phone FROM+Account^null^</description>
    <label>Allowed Operations Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>