force-app/main/default/objects/SFDC_Config__mdt/fields/Auth_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>Auth_Code_URL__c</fullName>
    <label>Auth Code URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>