force-app/main/default/objects/SFDC_Config__mdt/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>