force-app/main/default/objects/SFDC_Config__mdt/fields/Domain_URL_of_Org_To_be_Integrated__c.field-meta.xml
<CustomField>
    <fullName>Domain_URL_of_Org_To_be_Integrated__c</fullName>
    <description>Go to MY DOmainand copy My Custom Domain URL</description>
    <inlineHelpText>Go to MY DOmainand copy My Custom Domain URL</inlineHelpText>
    <label>Domain URL of Org To be Integrated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>