force-app/main/default/objects/SFDC_Config__mdt/fields/Expires_in__c.field-meta.xml
<CustomField>
    <fullName>Expires_in__c</fullName>
    <label>Expires in (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>