force-app/main/default/objects/SFDC_Config__mdt/fields/Issued_at__c.field-meta.xml
<CustomField>
    <fullName>Issued_at__c</fullName>
    <label>Issued at</label>
    <type>DateTime</type>
</CustomField>