force-app/main/default/objects/SFDC_Config__mdt/fields/Refresh_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_URL__c</fullName>
    <label>Refresh Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>